--- a/style.css
+++ b/style.css
@@ -102,6 +102,16 @@ main form div {
     font-size: 18px;    
 }
 
+main form div embed {
+    width: 100%;
+    height: 350px;
+}
+
+form#contribute {
+    padding: 0;
+    margin: 0;
+}
+
 select {
     font-size: 25px;
     text-align: center;
